# ros-test

./: .gitignore  README.md
docs/: assessment.tex
docs/p1/: client.tex  move.tex  service_spawn.tex  single_flower.tex
docs/p2/: appendix.tex  fk.tex
src/rpal_ros_test/: CMakeLists.txt  draw  package.xml  setup.py
src/rpal_ros_test/launch/: client.launch  draw_server.launch  fk.launch  pubsub.launch  singleflower.launch  spawn_flower.launch
src/rpal_ros_test/src/: arm_config.py  client.py  draw_server.py  fk.py  launcher.py  pubsub.py  singleflower.py  spawn_flower.py
src/rpal_ros_test/srv/: Draw.srv  Fk.srv  JacString.srv
