<?xml version="1.0"?>
<package format="2">
  <name>rpal_ros_test</name>
  <version>0.1.0</version>
  <description>The lab undergraduate ROS assessment</description>
  <maintainer email="rpal@cornell.edu">RPAL</maintainer>
  <license>MIT</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <run_depend>message_runtime</run_depend>
  </export>
</package>
